fix overflow

--- a/style/style.css
+++ b/style/style.css
@@ -47,6 +47,7 @@ section {
   padding-left: 20px;
   margin-left: auto;
   margin-right: auto;
+  overflow: hidden;
 }
 @media (min-width: 768px) {
   .container {
